# Reaction-Playground

./: .gitignore  README.md  Reaction_Playground.ipynb  all_reactions.txt  asset-manifest.json  computations.py  config.json  config.py  datatypes.py  google_colab_ui.py  index.html  main.py  program.py  pyproject.toml  reaction.py  requirements.txt  ui.py
.github/workflows/: python-package-conda.yml  run_pytest.yaml  run_pytest.yml
api/: auth.py  classifier_router.py  general_router.py  main.py  playground_router.py  response.py  solver_router.py  utils.py
backend/: all_reactions.yaml  app.py  computations.py  config.json  config.py  datatypes.py  fastapi_rdkit_utils.py  main.py  mol_classification.py  program.py  reaction.py  ui.py
backend/data/: all_reactions.yaml  substructures.yaml
backend/interfaces/: cli.py  flask_ui.py  ui.py
backend/templates/: base.jinja  home.jinja  playground_mode_add_reactants.jinja
backend/tests/: conftest.py  test_computations.py  test_pipeline.py
flask/website/: views.py
frontend/: main.py  package-lock.json  package.json  static.json
frontend/public/: index.html
frontend/src/: App.js  App.vue  ChemDraw.js  Classifier.js  NavBar.js  Playground.js  Solver.js  endpoints.js  hooks.js  (+3 more)
interfaces/: cli.py  flask_ui.py  ui.py
tests/: conftest.py  test_computations.py  test_data_quality.py  test_pipeline.py  utils.py
website/: all_reactions.yaml  app.py  computations.py  config.py  datatypes.py  fastapi_rdkit_utils.py  mol_classification.py  program.py  reaction.py  views.py
website2/: fastapi_rdkit_utils.py  main.py
(+63 files in other folders)
