[tool.poetry]
name = "reaction-playground-ide"
version = "0.1.0"
description = ""
authors = ["pranavm716 <pranav.manjapra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2023.9.2"
pytest = "^7.4.3"
pydantic = "^2.5.2"
pyyaml = "^6.0.1"
flask = "^3.0.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
