[tool.poetry]
name = "reaction-playground-ide"
version = "0.1.0"
description = ""
authors = ["pranavm716 <pranav.manjapra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2023.9.2"
pydantic = "^2.5.2"
pyyaml = "^6.0.1"
pillow = "^10.1.0"
fastapi = {extras = ["all"], version = "^0.105.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
